--- a/index.html
+++ b/index.html
@@ -13,5 +13,41 @@
         <p>This is a sample paragraph. Seems kind of small right now (actually, I was zoomed out).<br>&nbsp;Line break (puts a space in front for some reason).<br></p>
         <hr />
         <p>Paragraph</p>
+        <h1>Project Notes</h1>
+        <h2>Reference Guidelines (tentative)</h2>
+        <p><div>Standard HTML elements</div><div>
+                <ul>
+                    <li>Headings (h1, h2…)
+                        <br>
+                    </li>
+                    <li>Paragraphs (p)
+                        <br>
+                    </li>
+                    <li>Bold (strong)
+                        <br>
+                    </li>
+                    <li>Italics (em)
+                        <br>
+                    </li>
+                    <li>Line breaks (br)
+                        <br>
+                    </li>
+                    <li>Visible lines (hr)
+                        <br>
+                    </li>
+                    <li>External/internal links (a)
+                        <br>
+                    </li>
+                    <li>Lists (ul, ol, li)
+                        <br>
+                    </li>
+                    <li>Tables (table, tr, td)
+                        <br>
+                    </li>
+                    <li>More to be added
+                        <br>
+                    </li>
+                </ul>
+            </div><div>Nesting of elements</div><div>UTF-8 characters (including emoji)</div><div>CSS formatting</div><div>Simple JS snippets</div></p>
     </body>
 </html>
