Add small note on collapsing/expanding page sections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Reference Guidelines (tentative)</h2>
         <p><div>Standard HTML elements</div><div>
                 <ul>
-                    <li>Headings (h1, h2…)
+                    <li>Headings (h1, h2, h3, h4…)
                         <br>
                     </li>
                     <li>Paragraphs (p)
@@ -48,6 +48,6 @@
                         <br>
                     </li>
                 </ul>
-            </div><div>Nesting of elements</div><div>UTF-8 characters (including emoji)</div><div>CSS formatting</div><div>Simple JS snippets</div></p>
+            </div><div>Nesting of elements</div><div>UTF-8 characters (including emoji)</div><div>CSS formatting</div><div>Simple JS snippets</div><h2>Collapsible outlines</h2><p>As seen on&nbsp;<a href="http://1.jothere.com/OPMySS" target="_blank">http://1.jothere.com/OPMySS</a>; the trick is to have some button to toggle the classes between collapsed and expanded.</p></p>
     </body>
 </html>
