Created master/child pages with some editable areas (for Pinegrow CMS mode) and a link to the child page.

--- a/page2.html
+++ b/page2.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html>
-<html lang="en" data-pgc-set-master>
+<!doctype html>
+<html lang="en" data-pgc-master="index.html">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title data-pgc-edit="title">New page</title>
+        <title data-pgc-field="title">New page</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <nav>
             <a href="page2.html">Notes</a>
         </nav>
-        <h1 data-pgc-edit="page_heading">Heading 1</h1>
-        <p data-pgc-edit="page_content">This is a sample paragraph. Seems kind of small right now (actually, I was zoomed out).<br>&nbsp;Line break (puts a space in front for some reason).<br></p>
+        <h1 data-pgc-field="page_heading">Project Notes</h1>
+        <p data-pgc-field="page_content">Standard HTML elements<br>Nesting of elements<br>UTF-8 characters (including emoji)<br>CSS formatting<br>Simple JS snippets<br>More to be added</p>
         <hr />
         <div>
             <ul>
