--- a/master.html
+++ b/master.html
@@ -34,7 +34,7 @@
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
                             <li class="active">
-                                <a href="#">Home</a>
+                                <a href="index.html">Home</a>
                             </li>
                             <li>
                                 <a href="page2.html">Notes</a>
