Update project notes

--- a/page2.html
+++ b/page2.html
@@ -84,7 +84,6 @@
                 <ul>
                     <li>
                         Standard HTML elements
-
                         <br>
                     </li>
                     <ul>
@@ -106,9 +105,10 @@
                         <li>Lists (ul, ol, li)
                             <br>
                         </li>
-                        <li>Tables (table, tr, td)
-                            <br>
-                        </li>
+                        <li>Tables (table, tr, td)</li>
+                        <li>Containers (div)</li>
+                        <li>Navigation (nav)</li>
+                        <li>Images (img)</li>
                         <li>More to be added
                             <br>
                         </li>
@@ -122,9 +122,10 @@
                     <li>CSS formatting
                         <br>
                     </li>
-                    <li>Simple JS snippets
-                        <br>
-                    </li>
+                    <ul>
+                        <li>Including frameworks such as Bootstrap</li>
+                    </ul>
+                    <li>Simple JS snippets</li>
                     <li>Collapsible outlines
                         <br>
                     </li>
