Update project notes

--- a/page2.html
+++ b/page2.html
@@ -84,15 +84,14 @@
                 <ul>
                     <li>
                         Standard HTML elements
-                        <br>
-                    </li>
+</li>
                     <ul>
                         <li>Headings (h1, h2, h3, h4…)</li>
                         <li>Paragraphs (p)</li>
                         <li>Bold (strong)</li>
-                        <li>Italics (em)
-                            <br>
-                        </li>
+                        <li>Italics (em)</li>
+                        <li>Strikethrough (s)</li>
+                        <li>Code snippets (code)</li>
                         <li>Line breaks (br)
                             <br>
                         </li>
